--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,16 @@ local.properties
 .gradle/
 /build/
 
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
 ######################
 # Package Files
 ######################
@@ -83,6 +93,10 @@ local.properties
 *.war
 *.ear
 *.db
+*.nar
+*.zip
+*.tar.gz
+*.rar
 
 ######################
 # Windows
@@ -133,9 +147,31 @@ Desktop.ini
 ######################
 # Maven Wrapper
 ######################
+HELP.md
 !.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
 ######################
 # ESLint
 ######################
 .eslintcache
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
